<resources>
    <string name="app_name" translatable="false">ZoOm Basic</string>
    <string name="enroll_simple">ENROLL</string>
    <string name="auth_simple">AUTHENTICATE</string>
    <string name="loginScreen_title">One Is All\nYou Need</string>
    <string name="loginScreen_description">Login to manage your account,\nenjoy special privileges and more!</string>
    <string name="loginScreen_forgotPIN"><u>Forgot PIN?</u></string>
    <string name="loginScreen_firstTimeLogin"><u>First Time Login</u></string>

    <string name="UMobileNo">U Mobile No.</string>
    <string name="sixDigitPIN">6-digit PIN</string>
    <string name="loginNow">LOGIN NOW</string>

    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
</resources>
