<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitStart"
                android:src="@drawable/logo_umobile"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView_logo"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/loginScreen_title"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/loginScreen_description"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView_title"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView_description"
                android:layout_alignParentBottom="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:hint="@string/UMobileNo"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:inputType="numberPassword"
                    android:hint="@string/sixDigitPIN"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_background"
                    android:text="@string/loginNow"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp" />

                <LinearLayout
                    android:id="@+id/linearLayout_footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E6000000"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textView_forgotPIN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginScreen_forgotPIN"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:text="|"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/textView_firstTimeLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginScreen_firstTimeLogin"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>